--- a/frontend/travel-app/package.json
+++ b/frontend/travel-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel-psw",
+  "name": "travel-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,15 +7,15 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:travel-psw": "node dist/travel-psw/server/server.mjs"
+    "serve:ssr:travel-app": "node dist/travel-app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.0",
-    "@angular/common": "^18.1.0",
+    "@angular/common": "^18.1.4",
     "@angular/compiler": "^18.1.0",
-    "@angular/core": "^18.1.0",
-    "@angular/forms": "^18.1.0",
+    "@angular/core": "^18.1.4",
+    "@angular/forms": "^18.1.4",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
